# staggrid

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
call_from_c/: CMakeLists.txt  prgm.c
src/: c_ffi.rs  lib.rs  python_module.rs  tests.rs
staggrid/: __init__.py
staggrid-c-api/: Cargo.toml  cbindgen.toml
staggrid-c-api/src/: lib.rs  raw_slice.rs
staggrid-c-api/tests/: CMakeLists.txt  grid.c
staggrid-py-api/: Cargo.toml  README.md  pyproject.toml  tox.ini
staggrid-py-api/pysrc/staggrid/: __init__.py
staggrid-py-api/pysrc/tests/: test_grid1d.py
staggrid-py-api/src/: lib.rs
staggrid-py-api/staggrid/: __init__.py  error.py
staggrid-py-api/staggrid/tests/: test_grid1d.py
tests_c_api/: CMakeLists.txt
