[package]
name = "staggrid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = "1.0.0"
ndarray = "0.15.4"
ndarray-npy = { version = "0.8.1", default-features = false, optional = true }
numpy = { version = "0.15.0", optional = true }
pyo3 = { version = "0.15.1", features = ["extension-module"], optional = true }

[features]
python-ffi = ["ndarray-npy", "numpy", "pyo3"]

[dev-dependencies]
temp_testdir = "0.2.3"
