[package]
name = "staggrid"
version = "0.1.0"
authors = ["Adrien Morison"]
edition = "2021"
rust-version = "1.56"
description = "Staggered grids management for finite volume solvers."
readme = "README.md"
repository = "https://github.com/amorison/staggrid"
license = "Apache-2.0"
categories = ["science", "mathematics"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = "1.0.0"
ndarray = "0.15.4"
numpy = { version = "0.15.0", optional = true }
pyo3 = { version = "0.15.1", features = ["extension-module"], optional = true }

[features]
python-ffi = ["numpy", "pyo3"]

[workspace]
members = ["staggrid-c-api"]
