[package]
name = "staggrid"
version = "0.1.0"
authors = ["Adrien Morison"]
edition = "2021"
rust-version = "1.56"
description = "Staggered grids management for finite volume solvers."
readme = "README.md"
repository = "https://github.com/amorison/staggrid"
license = "Apache-2.0"
categories = ["science", "mathematics"]

[dependencies]
thiserror = "1.0.0"
ndarray = "0.15.4"

[workspace]
members = ["staggrid-c-api", "staggrid-py-api"]
