[build-system]
requires = ["maturin==0.12.6"]
build-backend = "maturin"

[tool.maturin]
cargo-extra-args = "--features=python-ffi"

[project]
name = "staggrid"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
