[package]
name = "staggrid-c-api"
version = "0.1.0"
authors = ["Adrien Morison"]
edition = "2021"
rust-version = "1.56"
description = "C API for the staggrid crate."
readme = "../README.md"
repository = "https://github.com/amorison/staggrid"
license = "Apache-2.0"
categories = ["science", "mathematics"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
staggrid = { path = "..", version = "0.1.0" }
